increased specifity to stop overflow issues

--- a/src/components/PageLoadAnimation/wave.scss
+++ b/src/components/PageLoadAnimation/wave.scss
@@ -6,6 +6,7 @@ body {
 @keyframes overflowHide {
   from {
     overflow: hidden;
+    height: 100dvh;
   }
 
   to {
@@ -13,16 +14,16 @@ body {
   }
 }
 
-.container {
+.load-container {
   position: fixed;
-  //   top: 45%;
-  //   left: 52%;
-  top: 0;
+  // top: 48%;
+  // left: 52%;
+  // top: 0;
   height: 100dvh;
   width: 100dvw;
   background: $background-color;
   animation: opacity ($totalAnimationTime + 2s) linear;
-  animation-fill-mode: infinite;
+  animation-fill-mode: forwards;
   z-index: 2;
 }
 @keyframes opacity {
@@ -38,20 +39,18 @@ body {
   }
 }
 .hexagon {
-  position: absolute;
   width: 49px;
   height: 28.87px;
+  background-color: $hexColor;
+  position: absolute;
+}
+.load-container .hexagon {
   top: 0%;
   left: 0%;
-  //   border-radius: 50%;
-  background-color: $hexColor;
-  //   -webkit-transform: scale(0);
   transform: scale(0);
 }
-
 .hexagon:before,
 .hexagon:after {
-  //   display: none;
   content: "";
   position: absolute;
   width: 0;
@@ -73,35 +72,35 @@ body {
 @for $r from 0 through $radius {
   @for $i from 0 through $r {
     $count: $count + 1;
-    .hexagon:nth-child(#{$count}) {
+    .load-container .hexagon:nth-child(#{$count}) {
       margin-top: $height * $r;
       margin-left: (($r * $halfWidth * -1)) + ($i * $width) - $halfWidth;
     }
   }
   @for $i from 0 through $r {
     $count: $count + 1;
-    .hexagon:nth-child(#{$count}) {
+    .load-container .hexagon:nth-child(#{$count}) {
       margin-top: ($r * $height) - ($i * $height);
       margin-left: ($halfWidth + ($r * $halfWidth)) + ($i * $halfWidth);
     }
   }
   @for $i from 0 through $r {
     $count: $count + 1;
-    .hexagon:nth-child(#{$count}) {
+    .load-container .hexagon:nth-child(#{$count}) {
       margin-top: ($height * -1) - ($i * $height);
       margin-left: ($r * $width) - ($i * $halfWidth);
     }
   }
   @for $i from 0 through $r {
     $count: $count + 1;
-    .hexagon:nth-child(#{$count}) {
+    .load-container .hexagon:nth-child(#{$count}) {
       margin-top: ($r + 1) * $height * -1;
       margin-left: (($r * $halfWidth)) - ($i * $width) - $width;
     }
   }
   @for $i from 0 through $r {
     $count: $count + 1;
-    .hexagon:nth-child(#{$count}) {
+    .load-container .hexagon:nth-child(#{$count}) {
       margin-top: (($r) * $height * -1) + ($i * $height);
       margin-left: (($r + 1) * $halfWidth * -1) - ($i * $halfWidth) - $width;
     }
@@ -109,7 +108,7 @@ body {
   @for $i from 0 through $r {
     $count: $count + 1;
     @if $i != $r {
-      .hexagon:nth-child(#{$count}) {
+      .load-container .hexagon:nth-child(#{$count}) {
         margin-top: ($height * -1) + ($i * $height) + ($height * 2);
         margin-left: ($r * $width * -1) + ($i * $halfWidth) - $width;
       }
@@ -140,8 +139,8 @@ body {
   }
 
   100% {
-    -webkit-transform: scale(0.01);
-    transform: scale(0.01);
+    -webkit-transform: scale(0);
+    transform: scale(0);
   }
 }
 
